--- a/styles/globals.css
+++ b/styles/globals.css
@@ -911,13 +911,13 @@ img {
 .header {
   height: 80px;
   width: 100%;
-  background-color:#fff;
-  color: #e2e2e2;
-  box-shadow: 0px 2px 0 #3a3a3a1a;
+  border-bottom: 1px solid #eef2f4;
   display: flex;
   align-items: center;
   padding: 0 20px;
+  background-color:#fff;
 }
+
 
 .wrapper {
   width: 100%;
