--- a/styles/globals.css
+++ b/styles/globals.css
@@ -967,3 +967,27 @@ img {
 .txtColsub {
   background:linear-gradient(90deg,#9528C9 12%,#C9289C 40.16%, #9528C9 90%);
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  border: 3px solid transparent;
+  border-top-color: #cd2222;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  top:-3px;
+  bottom:0px;
+  left:-2px;
+  right:0px;
+  position: absolute;
+  animation: spin 1s linear infinite;
+}
